[tool.poetry]
name = "audprodassetdb"
version = "0.1.0"
description = "A tool to build and indexed database of your assets to use in audio production."
authors = ["Daniel Andrlik <daniel@andrlik.org>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
safety = "^1.10.3"
darglint = "^1.8.1"
bandit = "^1.7.4"
black = {extras = ["d"], version = "^22.3.0"}
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
